--- a/_posts/2022-10-15-INMEDIA-港人辦烏克蘭讀劇節-義演為當地ngo募款-直面異地苦難為創傷解結.html
+++ b/_posts/2022-10-15-INMEDIA-港人辦烏克蘭讀劇節-義演為當地ngo募款-直面異地苦難為創傷解結.html
@@ -8,11 +8,11 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/%E5%82%91%E6%96%AF_11.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>俄烏戰爭自2月開始，至今超過半年。港人關注戰事，以不同方式支援當地人民，其中文藝平台流白之間在3月舉辦讀劇活動，為烏克蘭非政府組織募款，反響不俗。今月，流白之間響應國際劇評人及導演John Freeman的號召，再次策辦讀劇活動，請來七位導演翻譯、28名演員呈現12個文本，於十月下旬的兩個週末公演。演出將在獨立書店和社區文化發展中心舉行，門票所得款項扣除製作成本後，將再用於捐助烏克蘭當地支援組織。</p>
+<img src="https://www.inmediahk.net/files/column_images/%E5%82%91%E6%96%AF_11.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>俄烏戰爭自2月開始，至今超過半年。港人關注戰事，以不同方式支援當地人民，其中文藝平台流白之間在3月舉辦讀劇活動，為烏克蘭非政府組織募款，反響不俗。今月，流白之間響應國際劇評人及導演John Freedman的號召，再次策辦讀劇活動，請來七位導演翻譯、28名演員呈現12個文本，於十月下旬的兩個週末公演。演出將在獨立書店和社區文化發展中心舉行，門票所得款項扣除製作成本後，將再用於捐助烏克蘭當地支援組織。</p>
 <p>監製黃家駒和Amy Sze認爲，俄烏關係涉及複雜的歷史脈絡，了解戰爭背景下的創作有助於香港觀眾理解世界、關心社會，直面異地的苦難或許可以給香港人帶來一些希望，重訪我們的社會現實並為過去的創傷「解結」。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9DaWJDy2e2" title="306131616_113736884824232_2149810679568783271_n"><img src="https://live.staticflickr.com/65535/52428760370_7ac176bc9f_z.jpg" width="455" alt="306131616_113736884824232_2149810679568783271_n" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5p0U87K3x5" title="無標題"><img src="https://live.staticflickr.com/65535/52430007077_6b565b7235_h.jpg" width="1137" alt="無標題" /></a></p>
 <p><strong>響應國際烏克蘭讀劇計劃 90人試鏡願義演</strong></p>
-<p>兩個多月前，流白之間響應John Freeman號召的國際烏克蘭讀劇計劃（Worldwide Ukrainian Play Readings），開始籌劃烏克蘭讀劇節。俄烏關係的討論，半年前隨戰爭開始而走進大眾視野，但在導演鐘肇熙看來，香港對烏克蘭乃至東歐不甚了解。因歷史文化背景，他指港人普遍對西歐較熟悉，我們對地理位置更近的地方如此陌生，成了是次策劃的契機之一。</p>
+<p>兩個多月前，流白之間響應John Freedman號召的國際烏克蘭讀劇計劃（Worldwide Ukrainian Play Readings），開始籌劃烏克蘭讀劇節。俄烏關係的討論，半年前隨戰爭開始而走進大眾視野，但在導演鍾肇熙看來，香港對烏克蘭乃至東歐不甚了解。因歷史文化背景，他指港人普遍對西歐較熟悉，我們對地理位置更近的地方如此陌生，成了是次策劃的契機之一。</p>
 <p>監製兼導演Amy亦認為，戰爭剛爆發時，香港社會上的聲音很兩極，很少有人會理解俄烏在歷史脈絡上的聯繫，以及因此產生的複雜結構。於是，她萌生了烏克蘭讀劇節的想法，希望大眾認識更多戰爭背後的細節。</p>
 <p>既是募款，演員都是義務演出，流白之間仍收到熱烈反響。據團隊統計，近90人參加試鏡，其中有演員，更有老師、醫生、護士、工程師等業餘演員，最後選出28人演出。在Amy看來，這也是對烏克蘭編劇的鼓勵——「原來喺咁遠嘅地方都有人知道、有人做、有人和應」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/577B7LdB17" title="讀劇節監製兼《儲光》導演Amy"><img src="https://live.staticflickr.com/65535/52423058901_4405f74041_z.jpg" alt="讀劇節監製兼《儲光》導演Amy" /></a><br /><em>烏克蘭讀劇節監製、《儲光》導演Amy</em></p>
@@ -34,5 +34,6 @@ author: 獨媒報導
 <p>黃家駒補充，雖希望盡可能支援當地，但捐款不是表演目的，理解世界才是。籌備讀劇節的過程中，團隊希望透過關心外國發生的事，邀請公眾參與，建構另一種香港人的認同——關心我們的社會、世界，並關心其他人的苦難——如此凝聚而成的社群，是傳統劇場較少嘗試的。鍾肇熙期待，讀劇節可以回應近年社會不斷談論的「何謂香港人？」的問題。</p>
 <p>訪問最後，黃家駒向《獨媒》表示，策劃讀劇活動前不知作為香港人「可以做啲咩」，只是覺得「我哋要做啲嘢」，盼以這種心態繼續走下去。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/32568ys780" title="導演鍾肇熙、監製黃家駒、監製Amy"><img src="https://live.staticflickr.com/65535/52423345834_77cff18704_z.jpg" alt="導演鍾肇熙、監製黃家駒、監製Amy" /></a></p>
+<p><a href="https://www.art-mate.net/doc/64276">購票連結</a></p>
 <p>記者：王佳文、劉裕城</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
