--- a/_posts/2022-10-15-INITIUM-命若星尘-erik-olin-wright-爱-社会学-与苦难中的真实乌托邦.html
+++ b/_posts/2022-10-15-INITIUM-命若星尘-erik-olin-wright-爱-社会学-与苦难中的真实乌托邦.html
@@ -20,7 +20,7 @@ author:
 <p>因此，当接到麦田出版社邀约为此书写推荐序时，惊喜莫名，因为万万没料到此书，竟能有与台湾读者会遇之殊胜机缘。</p>
 <p>展读书稿之际，又看到艾瑞克在病痛凌虐、死亡逼视、预知时至，身心的艰难，及舍放不下家人的，爱别离苦。常在某些段落，掩卷太息，诸多感慨齐涌心头。</p>
 <p>此书把艾瑞克向来的人格特质发挥得淋漓尽致，被布若威（Michael Burawoy）称为“攸关生死斗争的美妙民族志书写”。艾瑞克在生命陷入危殆，于病苦中仍奋力，甚至欢欣写著。仿佛在沙漠中的琼麻，必须在极为炽旱酷烈，干冷的寒风中，努力储藏水分，从毫无免疫力的身体，抽出柔软的花茎，悬命开出颤巍巍，那么艰韧、但又那么凄绝的，爱别人生之花。</p>
-<section class="intro"><section class="left"><h3>《命若星座：这里就是真实乌托邦，一位公共社会学家对于生与死的最后反思》</h3><p><small>出版日期：2022/10
+<section class="intro"><section class="left"><h3>《命若星塵：这里就是真实乌托邦，一位公共社会学家对于生与死的最后反思》</h3><p><small>出版日期：2022/10
 <br>出版社：麦田
 <br>作者：艾瑞克．莱特（Erik Olin Wright）
 <br>译者：陈婉容</small></p><p></p></section>
