--- a/_posts/2022-10-15-INITIUM-巴黎提前熄灯的节能做法能否奏效.html
+++ b/_posts/2022-10-15-INITIUM-巴黎提前熄灯的节能做法能否奏效.html
@@ -5,7 +5,7 @@ date: 2022-10-15 14:44:00.000000000 +00:00
 link: https://theinitium.com/article/20221016-wsj-paris-lights-energy-conservation/
 categories: initium
 tags: blog
-author: 华尔街日报记者 Nick Kostov
+author: 华尔街日报
 ---
 
 <p>「作为法国节能计划的一部分，埃菲尔铁塔等巴黎的一些地标性建筑将提前熄灭灯光。然而，一些人质疑这些举措是否会取得预期效果。」</p><p>华尔街日报记者 Nick Kostov</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221016-wsj-paris-lights-energy-conservation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/10/e44d80e4d0f640ee89a03fa22cc8f306.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年9月23日，法国巴黎为了节能，埃菲尔铁塔的灯光提前关灯。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
