--- a/_posts/2022-10-19-INMEDIA-施政報告-葉劉高度評價-內容好全面-高質量.html
+++ b/_posts/2022-10-19-INMEDIA-施政報告-葉劉高度評價-內容好全面-高質量.html
@@ -12,6 +12,6 @@ author: 獨媒報導
 <p>身兼行會召集人的葉劉淑儀表示，報告回應了國家主席習近平七一訪港發表講話時的「四個必須、四個希望」及社會各方面訴求，包括土地房屋、醫療及青年發展。她又「高度評價」讚揚建議具有開創性，例如強化公務員的管理機制及成立香港投資管理有限公司，認為有助政府為將來發展的基建計劃融資。她又稱，很高興政府在發展大嶼山方面與他們看法一致。</p>
 <p>黎棟國讚賞政府「真真正正去搶人才」，指政府過去態度被動，現在已改變為「主動出撃」，並樂見政府安排外來人才來港後可以穩定發展，以香港為家。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/417yG7R66n" title="無標題"><img src="https://live.staticflickr.com/65535/52439008664_e50eec81f1_b.jpg" width="1024" alt="無標題" /></a></p>
-<p>容海恩表示關注香港如何積極融入國家發展大局，很高興見到《施政報告》有不少篇幅談及大灣區發展及北部都會區，並強調香港與內地要「互相輝映」。陳家佩則讚李家超「以人民為中心」﹐指報告有提到長者醫療、青年機遇等措施，十分人性化。</p>
+<p>容海恩表示關注香港如何積極融入國家發展大局，很高興見到《施政報告》有不少篇幅談及大灣區發展及北部都會區，並強調香港與內地要「互相輝映」。陳家珮則讚李家超「以人民為中心」﹐指報告有提到長者醫療、青年機遇等措施，十分人性化。</p>
 <p>李梓敬稱《施政報告》如李家超一樣，「好實際，亦都唔花巧」，指政府有回應改革公務員制度的建議，認為政府之後可善用公務員處理下一波疫情等危機。他又稱讚「簡約公屋」是突破性的思維，指措施短期內可協助劏房戶上樓，但同時不影響傳統輪候公屋時間。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
