--- a/_posts/2022-10-20-INMEDIA-菁英盃-香港u23一球不敵東方-司徒文俊-著重表現多於成績.html
+++ b/_posts/2022-10-20-INMEDIA-菁英盃-香港u23一球不敵東方-司徒文俊-著重表現多於成績.html
@@ -29,7 +29,7 @@ author: 獨媒報導
 <p>今場入場人數378人，足總亦未有在場邊及龍門後方放置賽事及廣告板。香港U23主教練司徒文俊病癒復出領軍，他在比賽後形容球隊表現有點拘謹，認為與早前大敗有關，導致信心受損。司徒文俊不排除球員未能恢復最好狀態，在壓迫上亦「差少少」，但他強調，球員在踢少一人仍嘗試力迫對手，應表揚一眾年輕人的努力。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0iMi5f675W" title="DSC_6503"><img src="https://live.staticflickr.com/65535/52439778869_854e5991ef_b.jpg" width="1024" alt="DSC_6503" /></a></p>
 <p><strong>見記者期間遭東方球迷柴台  司徒：唔緊要，有立場啫</strong></p>
-<p>深水埗、晉峰主教練早前先後請辭，司徒文俊對《獨媒》重申，烏紗沒有壓力，球隊領導層未有給予「指示」。</p>
+<p>深水埗、晉峰主教練早前先後請辭，司徒文俊對《獨媒》重申，其烏紗沒有壓力，球隊領導層未有給予「指示」。</p>
 <p>對於今場戰果，司徒文俊指兩隊均面對較密的賽程，認為球隊今場踢得較辛苦，因為迫搶未能成功。至於今場賽事有火藥味，司徒文俊就稱比賽必然有碰撞及拗撬，但就不點名對領紅的陳潤潼指：「咁當然啦，如一啲過多咗行為其實就無需要，呢個學習嘅元素。」</p>
 <p>在見記者期間，曾任東方主教練的司徒文俊，遭到老東家的球迷柴台。有東方球迷高呼「喂司徒文俊，垃圾，垃圾，垃圾！」但亦有其他球迷對司徒文俊打氣稱：「加油司徒sir，唔好理佢哋噏乜。」司徒文俊輕輕回應稱：「唔緊要、唔緊要，有立場啫。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9P6G6RtJYg" title="DSC_6336"><img src="https://live.staticflickr.com/65535/52439743449_bd528b5226_b.jpg" width="1024" alt="DSC_6336" /></a></p>
