--- a/_posts/2022-10-20-INITIUM-早报-特拉斯上任45日宣布辞职-成为英国史上任期最短首相.html
+++ b/_posts/2022-10-20-INITIUM-早报-特拉斯上任45日宣布辞职-成为英国史上任期最短首相.html
@@ -12,7 +12,7 @@ author:
             <figcaption itemprop="caption">2022年10月20日，英国首相特拉斯（Liz Truss）在唐宁街10号外发表辞职演讲。<span class="credit">摄：Rob Pinney/Getty Images</span></figcaption></figure><h3>特拉斯上任45日宣布辞职，成为英国史上任期最短首相</h3>
 <p><a href="https://www.bbc.com/news/live/uk-politics-63309400">英国首相特拉斯（Liz Truss）周四宣布辞去保守党党魁</a>。她于9月6日上台，是英国史上任期最短的首相。她将暂时留任首相，直到下周选出新党魁。</p>
 <p>特拉斯的两名竞选对手苏纳克（Rishi Sunak）和莫当特（Penny Mordaunt）被视为新党魁的有力竞争者。7月份被赶下台的前首相约翰逊（Boris Johnson）亦有可能卷土重来。新任财政大臣亨特（Jeremy Hunt）则放弃角逐。</p>
-<p>根据程序，候选人需要在周一下午2点前获得至少100名议员支持，如果只有一名候选人达到门槛，则自动当选党魁并接任首相。如果有两人符合资格，则将由保守党议员在周五前投票选出获胜者。</p>
+<p>根据程序，候选人需要在周一下午2点前获得至少100名议员支持，如果只有一名候选人达到门槛，则自动当选党魁并接任首相。如果有两人符合资格，则将由保守党党员在周五前投票选出获胜者。</p>
 <p>特拉斯政府此前在未公布一套独立经济政策情况下，宣布一系列无资金来源的减税措施，导致投资者自9月23日大量抛售英国政府债券。上周特拉斯更换财政大臣，试图稳定局面，但未能挽回党内信任。</p>
 <p><a href="https://www.bbc.com/news/uk-63328000">特拉斯在辞职演讲中表示</a>，她在国家经济和国际形势都极不稳定的时刻上任，肩负改变现状的责任。她称其政府在能源账单和削减国民保险方面取得成果，还提出一个低税收高增长的经济愿景，将使英国从“脱欧”的自由中获利。</p>
 <p>但她意识到，鉴于现实情况，她无法完成作为保守党党魁以及英国首相的任务。她已与国王沟通，告知将辞去保守党党魁职务。保守党1922委员会主席布雷迪（Graham Brady）也同意下周通过领导层选举选出新党魁。选出继任者前她将继续担任首相。</p>
