--- a/_posts/2022-10-22-INMEDIA-官稱賢學思政頗受歡迎-宣揚-香港民族-蓄意挑戰國安法-無人受煽動不減罪責.html
+++ b/_posts/2022-10-22-INMEDIA-官稱賢學思政頗受歡迎-宣揚-香港民族-蓄意挑戰國安法-無人受煽動不減罪責.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p>案件由《國安法》指定法官郭偉健處理，控方代表為高級檢控官李庭偉。4人上周六求情，由於本罪規定情節嚴重須判監5年以上，情節較輕判監5年以下，國安法指定法官郭偉健需時考慮案情屬嚴重或輕微，押後至今判刑。</p>
 <p>《國安法》無列明如何界定情節嚴重或輕微，不過上訴庭早前裁定「第二代美國隊長」馬俊文煽動他人分裂國家案，屬情節嚴重但刑責較輕，改判5年。郭偉健今同意該案可作為「標竿」，指本案被告僅於7次街站發言，比馬俊文19次發言為少；沒有如馬般使用社交媒體或互聯網進行煽動；亦沒有像馬般多次因煽動意圖罪被捕獲保釋後再犯，因此情節較為輕微。</p>
 <p><strong>肯定被告案發時知「光時」具港獨之意 煽動顛覆國家政權</strong></p>
-<p>惟郭偉健指出，本案罪行仍然非常嚴重。他指香港自古以來是中國的一部分、港人屬中華民族，惟被告每次街站均宣揚「香港民族」概念，煽動港獨及顛覆政權。他批評「香港民族」是鼓吹港獨的人「僭建出來的概念」，無任何法理或歷史基礎，被告向公眾宣揚或令心智不成熟或不明白歷史的人受誤導。</p>
+<p>惟郭偉健指出，本案罪行仍然非常嚴重。他指香港自古以來是中國的一部分、港人屬中華民族，惟被告每次街站均宣揚「香港民族」概念，煽動港獨及顛覆政權。他批評「香港民族」是鼓吹港獨的人「僭建出來的概念」，無任何法理或歷史基礎，被告向公眾宣揚，或令心智不成熟或不明白歷史的人受誤導，以為香港不屬中國。</p>
 <p>辯方曾指，法庭於去年7月唐英傑案才裁定「光時」意思，被告案發時並不知道口號具港獨之意。惟郭不接納，指王逸戰曾力陳「光時」不僅是一句口號，鼓吹公眾與香港民族站在同一陣線，抗爭至香港重光為止；加上陳枳森每次均協助王擺街站，朱慧盈和黃沅琳亦曾帶領公眾喊「光時」，故他肯定4人在案發時均知道「光時」含港獨和分裂國家的意思，有意圖煽動公眾推翻中央和特區政府政權，「成立所謂香港民族嘅政權」。</p>
 <p><strong>批被告蓄意挑戰國安法 鼓勵公眾再次上街抗爭</strong></p>
 <p>郭偉健又批評，4名被告「蓄意挑戰國安法」，如王逸戰在《國安法》實施後設抗爭相展和街站，表明公眾初心不再，望喚醒他們記憶。他指被告顯然是認為《國安法》成功制止社會動亂對實現港獨不理想，望鼓勵或慫恿公眾再次上街抗爭。</p>
