--- a/_posts/2022-10-23-INMEDIA-pink-dot人海逼爆九展-參加者-不只是性小眾圍爐.html
+++ b/_posts/2022-10-23-INMEDIA-pink-dot人海逼爆九展-參加者-不只是性小眾圍爐.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Pink dot人海逼爆九展 參加者：不只是性小眾圍爐
+title: Pink Dot人海逼爆九展 參加者：不只是性小眾圍爐
 date: 2022-10-23 11:50:36.000000000 +00:00
 link: https://www.inmediahk.net/node/%E6%80%A7%E5%88%A5/pink-dot%E4%BA%BA%E6%B5%B7%E9%80%BC%E7%88%86%E4%B9%9D%E5%B1%95-%E5%8F%83%E5%8A%A0%E8%80%85%EF%BC%9A%E4%B8%8D%E5%8F%AA%E6%98%AF%E6%80%A7%E5%B0%8F%E7%9C%BE%E5%9C%8D%E7%88%90
 categories: inmedia
