--- a/_posts/2022-10-25-INMEDIA-廢-免針紙-敗訴後續-李家超-很快有決定.html
+++ b/_posts/2022-10-25-INMEDIA-廢-免針紙-敗訴後續-李家超-很快有決定.html
@@ -9,11 +9,11 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/202210251.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>郭卓堅司法覆核勝訴，政府廢除七名被捕醫生「免針紙」決定無效</em></p>
-<p><font color="red">（獨媒報導）</font>行政長官李家超舉行行政會議前見記者，就政府廢除七名被捕醫生發出的「免針紙」遭法庭裁定無效，他稱跟進工作很快有決定及結果。外界預料當局將修訂《預防及控制疾病（疫苗通行證）規例》第599L章，賦權醫務及衞生局局長廢除免針紙。</p>
+<p><font color="red">（獨媒報導）</font>行政長官李家超舉行行政會議前見記者，就政府廢除七名被捕醫生發出的「免針紙」遭法庭裁定無效，他稱跟進工作很快有決定及結果。外界預料當局將修訂《預防及控制疾病（疫苗通行證）規例》第599L章，賦權醫務衞生局局長廢除免針紙。</p>
 <p>行政長官李家超上周發表首份《施政報告》，他大讚自己的《報告》，稱不同人士對《報告》有正面看法，如劏房居民期望入住「簡約公屋」；海外人士對本港引入專才有興趣，以及創新科技上的政策，形容為十分鼓舞。</p>
 <p><strong>未回應是將修例賦權局長廢除「免針紙」</strong></p>
 <p>政府廢除七名被捕醫生發出的「免針紙」，遭「長洲覆核王」郭卓堅提出司法覆核並敗訴，<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E9%86%AB%E8%A1%9E%E5%B1%80%E6%95%97%E8%A8%B4-%E6%9B%BE%E8%BE%AF%E7%A8%B1%E5%BB%A2%E9%87%9D%E7%B4%99%E5%B1%AC%E3%80%8C%E8%A1%8C%E6%94%BF%E6%B1%BA%E5%AE%9A%E3%80%8D-%E6%B3%95%E5%AE%98%E6%96%A5%E7%8E%A9%E6%96%87%E5%AD%97%E9%81%8A%E6%88%B2%E3%80%81%E9%87%8D%E5%AF%AB%E6%AD%B7%E5%8F%B2">法官斥政府指「不接納」該些「免針紙」的「行政決定」是玩弄文字遊戲</a>。對於跟進工作，他稱很快有決定及結果，會盡快向公眾公布。</p>
-<p>李家超重申政府的原則，包括依法辦事、保護公眾健康、確保政府行事的法律基礎，以及會追究任何涉嫌違反法律及專業操守的行為。他未有回應是否會修訂《預防及控制疾病（疫苗通行證）規例》第599L章，賦權醫務及衞生局局長廢除免針紙。</p>
+<p>李家超重申政府的原則，包括依法辦事、保護公眾健康、確保政府行事的法律基礎，以及會追究任何涉嫌違反法律及專業操守的行為。他未有回應是否會修訂《預防及控制疾病（疫苗通行證）規例》第599L章，賦權醫務衞生局局長廢除免針紙。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/B02xorjj0V" title="無標題"><img src="https://live.staticflickr.com/65535/52451721042_c15b379205_z.jpg" alt="無標題" /></a></p>
 <p>被問到多個政府部門「回應」漫畫家尊子的作品，李家超稱應容許不同人士包括政府部門行駛權利，指如部門認為作品不公正或不適當的理解，作出澄清或跟進亦是「好事」。</p>
 <p>恆生指數大跌，在昨日（10月24日）跌破1997年7月1日回歸日開市的點數。李家超只表示國際金融市場不穩定，會持續留意情況。《點新聞》問及與內地通關，李家超只稱仍在商討。</p>
