--- a/_posts/2022-10-25-INMEDIA-梁美芬倡領取特區護照須宣誓-培養愛國-情感要求.html
+++ b/_posts/2022-10-25-INMEDIA-梁美芬倡領取特區護照須宣誓-培養愛國-情感要求.html
@@ -17,5 +17,5 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/64Bi34RRa3" title="無標題"><img src="https://live.staticflickr.com/65535/52453431448_9a12ff53d5_z.jpg" alt="無標題" /></a><br /><em>教育局副局長施俊輝</em></p>
 <p>梁美芬續指，應在小學階段讓學生認識國歌歌詞，她逐句讀出國歌，並指「小朋友最易產生情感」，要讓小朋友知道「真正當時歷史環境」，又指很欣賞國劇《覺醒年代》。她指教師有責任知道中國憲法第一條，就是共產黨領導國家，而中國是走「中國特色社會主義」，才不會出現「滅咗自己領導人」的口號，她又指要深化二十大報告讓市民認識中共領導。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/558j3L8c4k" title="無標題"><img src="https://live.staticflickr.com/65535/52452388822_0034c87895_z.jpg" alt="無標題" /></a><br /><em>梁美芬</em></p>
-<p>梁美芬又表示現時教育局的做法太被動，應仿效外國培養市民對國家的「情感要求」，她舉例可以在取得中國國藉時要求宣誓，或者市民在領取特區護照時宣誓，可以藉此培養。</p>
+<p>梁美芬又表示現時教育局的做法太被動，應仿效外國培養市民對國家的「情感要求」，她舉例可以在取得中國國籍時要求宣誓，或者市民在領取特區護照時宣誓，可以藉此培養。</p>
 </div></div></div>
