--- a/_posts/2022-10-26-INMEDIA-翠林邨業主大會平日西貢會堂舉行-房委會-將審慎投票捍衛業主整體利益.html
+++ b/_posts/2022-10-26-INMEDIA-翠林邨業主大會平日西貢會堂舉行-房委會-將審慎投票捍衛業主整體利益.html
@@ -33,4 +33,5 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/U1S30gxCUK" title="無標題"><img src="https://live.staticflickr.com/65535/50077711331_ed96a60e5d_c.jpg" width="800" alt="無標題" /></a></p>
 <p>她笑言，自「翠家」停運後，自己連續四日都在回覆街坊的訊息，有人「喊晒口咁」表達不捨，亦有人大感迷惘問「翠家走咗邊個仲幫翠林邨？」令不眾義工感到窩心，亦明白「翠家」對街坊而言是「值得信賴嘅人。」被問及會否擔心有風險，她直言未有相關顧慮，又指法團「可以話我哋（翠家）抹黑，你（法團）出嚟澄清到嘅我哋都可以道歉，但你又唔做？」</p>
 <p>她重申「翠家」的核心成個員沒有再參選法團的打算，未來除了為屋邨爭取使用市建局「招標妥」外，亦會作為一個讓有意參選的街坊互相認識，作為準備籌組法團的平台。</p>
+<p>《獨媒》多次致電聯絡法團主席冼雄輝，惟未獲回覆。</p>
 </div></div></div>
