--- a/_posts/2022-10-26-INITIUM-早报-伊朗女子阿米尼去世40天-警察向其家乡哀悼者开枪.html
+++ b/_posts/2022-10-26-INITIUM-早报-伊朗女子阿米尼去世40天-警察向其家乡哀悼者开枪.html
@@ -23,7 +23,7 @@ author:
 <p>伊朗国家媒体早前报导称有三名枪手参与袭击。伊朗警方后来又称仅一名枪手作案，该枪手已被抓获，正在接受审问。</p>
 <p>伊朗半官方塔斯尼姆通讯社称，枪手先在入口处向工作人员开枪，随后他的步枪卡住，他被现场众人追赶。接着他修好枪，又向追他的人开枪，还进入一个院子向朝拜者开枪。据报死者包括妇女和儿童。</p>
 <h3>普京观看俄罗斯年度核武演习</h3>
-<p><a href="https://www.bbc.com/news/world-europe-63397927">俄罗斯政府周三表示</a>，总统普京观看了当天举行的年度例行核武演习，从北极向俄罗斯远东地区发射了弹道导弹和巡航导弹。</p>
+<p><a href="https://www.bbc.com/news/world-europe-63397927">俄罗斯政府表示</a>，总统普京周三观看了年度例行核武演习，<a href="https://www.pbs.org/newshour/world/vladimir-putin-monitors-practice-launches-by-russias-nuclear-forces">演习包括</a>从北部普列谢茨克发射场发射一枚陆基洲际弹道导弹，以及从科拉半岛附近海域核潜艇向俄远东地区发射一枚“深蓝”（Sineva）洲际弹道导弹。</p>
 <p>美国政府周二曾指，俄罗斯遵照《新削减战略武器条约》，已将此次演习通知美方。美方评价，在俄罗斯入侵乌克兰之际，俄方在演习前通报尤其重要，可减少各方误判风险。</p>
 <p>俄罗斯上一次核演习是在其入侵乌克兰的五天前进行。</p>
 <p>北约也正在欧洲西北部举行核演习，并表示涉及14个国家的飞行训练正在比利时、英国和北海上空进行，直到周日。</p>
