--- a/_posts/2022-10-27-INMEDIA-首宗-旁聽師-煽動案-兩人罪成下午判刑-親自求情-歷史將判我無罪.html
+++ b/_posts/2022-10-27-INMEDIA-首宗-旁聽師-煽動案-兩人罪成下午判刑-親自求情-歷史將判我無罪.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/pang%2001%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>營運 YouTube 頻道「牧師和你顛」的59歲「旁聽師」彭滿圓，涉於鄒幸彤六四案裁決當日，與67歲女子在庭內拍掌及稱裁判官喪失良知，兩人否認「發表煽動文字」 罪，為首宗有「旁聽師」因庭上行為被起訴的案件。彭亦涉經營頻道，否認「作出具煽動意圖的作為」罪。兩人今（27日）被裁定所有罪名成立，押後至下午判刑。彭親自求情指，雖然被裁定罪成，表面上是控方得勝，但從守護良知及捍衛人權法治的角度來看，「本人卻得勝了！」。他強調「歷史將宣判我無罪」，並稱自己坦承曾拍掌及指正法官，正是「戰勝恐懼的自由」。</p>
 <p><strong>被告：表面上打敗官司、從守護良知角度是得勝</strong></p>
-<p>首被告彭滿圓求情時引《聖經》指，「顛倒善惡的人有禍了」，他指自己在這場煽動訴訟戰中被裁定罪成，表面上打敗了官司、而控方得勝，但從守護良知及捍衛人權法治的角度來看，「本人卻得勝了！」。</p>
+<p>首被告彭滿圓求情時引《聖經》指，「顛倒善惡的人有禍了」，他指自己在這場煽動訴訟戰中被裁定罪成，表面上打敗了官司、而控方得勝，但從守護良知及捍衛人權法治的角度來看，「本人卻得勝了！」</p>
 <p>彭又指，今日的裁決應驗了他早前所稱現時湧現煽動者，反問：「誰才是真正的煽動者？」他強調「歷史將宣判我無罪」，並指自己一直是遵守法律及正直的良好公民。而他坦承曾在庭上拍掌，以及在頻道中指正法官行為，正是「戰勝恐懼的自由」，又指自己活出書本《無權勢者的力量》中所指的誠實生活。</p>
 <p><strong>被告：將繼續承擔「監獄牧師」的使命</strong></p>
 <p>彭強調，無論面對多長的刑期都會欣然接受，他會繼續承擔「監獄牧師」的使命。他指自己在還柙半年期間，在獄中建立「鐵窗顛峰教會」及「國際鐵窗顛峰教會」，將監獄轉化為有愛的地方。他最後稱：「五光十色朱古力，香港人披荊斬棘」。</p>
