--- a/_posts/2022-10-28-INITIUM-从习近平到-习家军-各地华人如何看待中共新一届领导层.html
+++ b/_posts/2022-10-28-INITIUM-从习近平到-习家军-各地华人如何看待中共新一届领导层.html
@@ -8,7 +8,7 @@ tags: blog
 author: 端传媒记者 朱婕 赖思 许伯崧 李易安 发自新加坡 台北
 ---
 
-<p>「“比起二十大，对我来说更重要的是四通桥。”」</p><p>端传媒记者 朱婕 赖思 许伯崧 李易安 发自新加坡 台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221028-mainland-party-congress-leadership/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/10/f6d3e984e5a04a1cb54d56a9d8d98413.jpg?imageView2/1/w/1080/h/747/format/jpg" alt="2022年10月12日，中国北京，人们在一个展览厅走过一幅中共总书记习近平的肖像。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「“中国接下来的路将是一场大赌博。”」</p><p>端传媒记者 朱婕 赖思 许伯崧 李易安 发自新加坡 台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221028-mainland-party-congress-leadership/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/10/f6d3e984e5a04a1cb54d56a9d8d98413.jpg?imageView2/1/w/1080/h/747/format/jpg" alt="2022年10月12日，中国北京，人们在一个展览厅走过一幅中共总书记习近平的肖像。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年10月12日，中国北京，人们在一个展览厅走过一幅中共总书记习近平的肖像。<span class="credit">摄：Kevin Frayer/Getty Images</span></figcaption></figure><p>“这个时代，谁都帮不上谁。”</p>
 <p>“我爷爷奶奶一直都说他好，上一个让他们这么夸的领导，还是毛泽东。”</p>
 <p>“比起二十大，对我来说更重要的事情是四通桥。”</p>
