Update VOCUS 2022-10-29 patch

--- a/_posts/2022-10-08-VOCUS-竹劍少年-新電影的少年仔.html
+++ b/_posts/2022-10-08-VOCUS-竹劍少年-新電影的少年仔.html
@@ -37,4 +37,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/d958c16d-2b63-4122-a71a-1ad83a62c3f4.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">我認為如果喜歡古早味風情，和想看看舊時代漁港和少年風情的人可以考慮觀看，《竹劍少年》整體來說像是一個剪掉太多現今腥羶色的少年仔電影，其中以竹劍為打倒體制與正義制裁的隱喻，不能說多好也有點微妙，但是頗有很多有趣的點與細節。</div>
 <div class="draft-block draft--p left">雖然整體故事總覺得是要跟《竹劍少年》這電影名硬扯上點關係，比起來我覺得乾脆叫《基隆港少年仔》還比較乾脆。我覺得電影拍出一個時代男性對於自己年少的妄想情懷，正義除惡的熱血想法，怎麼都很不政治正確，但這就是一個時代的走過，作為一個懷舊與先驅的少年犯罪與青春疼痛電影來說，如今仍有許多電影如此致敬著。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/LSgovz71u8E"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/LSgovz71u8E"></iframe></div>
