--- a/_posts/2022-10-09-VOCUS-台北村落之聲-城市的未來-是由現在的每一個進行中的行動所建構的-專訪2022臺北城市博覽會總策展人龔書章.html
+++ b/_posts/2022-10-09-VOCUS-台北村落之聲-城市的未來-是由現在的每一個進行中的行動所建構的-專訪2022臺北城市博覽會總策展人龔書章.html
@@ -42,17 +42,6 @@ author: 故事StoryStudio
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">龔：</span>沒有覺得特別那首歌有代表性，對臺北最有印象的是楊德昌的電影從《恐怖份子》到《青梅竹馬》再到《牯嶺街少年殺人事件》，中產階級困惑的臺北市、繁華走不出去的臺北市、牯嶺街一群賀爾蒙過多的年輕人歷史文化的臺北市，都是不同generation世代對於臺北市的感覺，也是我自己心目中臺北市的感覺。</div>
 <div class="draft-block draft--p left">城市現在最需要是持續性，不要因為選舉而失去美好的價值及行動，這不只是由上而下，也是由下而上的雙向行動。讓公辧人員更能整合自己專職的與整體價值的關聯；讓民眾更能理解，自己即使身為一個小小的市民，在這不斷變動的城市裡，也能發揮很大的進步力量。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/a8a79ff1-fb04-459e-91d8-0c3fbb24ae85.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">龔書章心中的臺北城市樣貌是楊德昌電影鏡頭下的臺北故事（source：劉耘桑拍攝）</figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/CrduKni-i-w"></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/xbY0uWSD0ME"></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Lh_QL1mBxvM"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/CrduKni-i-w"></iframe></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/xbY0uWSD0ME"></iframe></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Lh_QL1mBxvM"></iframe></div>
