--- a/_posts/2022-10-09-VOCUS-台北村落之聲-臺北夜間景觀之歌.html
+++ b/_posts/2022-10-09-VOCUS-台北村落之聲-臺北夜間景觀之歌.html
@@ -12,7 +12,7 @@ author: 故事StoryStudio
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">聲音、音樂與都市照明，乍看之下並沒有直接的相關。然而翻開1995年新加坡市政特區的燈光整體計畫及規範，赫然發現：「單棟建築物夜間的美，並不能代表此都市的成功。好的夜間景觀，應該和諧的交響樂章一樣，有著順暢優美的旋律。」</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">新加坡的夜晚是首交響樂，臺北呢？身處充滿各種生猛噪音、處處有其各自特色的大臺北，還真很難以某種音樂型式來形容。既然無法為此都市定調，不妨順著筆者帶學生夜遊路線，伴隨推薦的歌單，一起來探訪多樣的夜臺北！</span></div>
 <h3 class="draft-block draft--h3" name="header-11shm"><span style="font-weight: bold; ">華麗樂章 首都核心區：〈月夜愁〉by 巴洛克獨奏樂團</span></h3>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/evzFeyJaBew"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/evzFeyJaBew"></iframe></div>
 <div class="draft-block draft--p left">為何在首都區配如此哀愁的歌？</div>
 <div class="draft-block draft--p left">事實上，這是首曲調源自平埔族歌謠，由鄧雨賢重新編曲成的臺語流行歌曲。歌詞中的「<span style="font-style: italic; ">月色照在三線路</span>」，當時中山南路便是唯一有路燈的東三線。這裡有許多優雅大器的歷史建物，如監察院、濟南教會，臺大醫院等等。 順著凱達格蘭大道，便連接到總統府，以此為中心向四周發散之建築物及大道，便是我們要走訪的「首都核心區」。</div>
 <div class="draft-block draft--p left">1999年臺北市政府將首都核心區內的10棟公家建物及一條大道分為三組，採用資格審遴選了三間燈光設計公司，以填志願順序方式，分別為這些建物群進行燈光設計。從1998年「臺北夜間景觀及公共建築照明設計與管制方案」書面燈光規劃，落實到建築實體運用，臺北光環境塑造在千禧年之前跨出一大步。這個創舉，在20多年後看來，仍深具遠見及尊重設計單位。</div>
@@ -23,7 +23,7 @@ author: 故事StoryStudio
 <div class="draft-block draft--p left">歡迎各位，在「風吹微微」時節，前來拜訪臺北光環境中「最接近和諧樂章」的首都核心區。</div>
 <div class="draft-block draft--p left">➤延伸閱讀：<a href="https://www.villagetaipei.net/Post?PId=15212" target="_blank" class="draft--a"><span style="text-decoration: underline; ">邊走邊看日治臺北城：欣賞拱圈與塔樓構成的城內建築</span></a></div>
 <h3 class="draft-block draft--h3" name="header-3j5rl"><span style="font-weight: bold; ">浪漫探戈 中山北路：〈夜半路燈〉 by 蘇芮</span></h3>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/9mAlDvFmpCU"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/9mAlDvFmpCU"></iframe></div>
 <div class="draft-block draft--p left">既然來到中山南路，當然要順道參觀中山北路。</div>
 <div class="draft-block draft--p left">比起政府機關林立、紀念形式的軸線風格的南路，北路則因通往陽明山，透過綠意盎然的大道，望著遠山讓人有「出城踏青」的歡愉感。沿街緊挨著的商店、餐廳、精品店及旅館。巷弄內美髮沙龍、服飾店、咖啡館、酒吧之多，散發著東洋 / 西洋並存的浪漫氣息。在中山北路走上七遍都不會無聊。</div>
 <div class="draft-block draft--p left">1995年，臺北市政府在民生東西路、農安街之間的中山北路、也就是「浪漫產業」婚紗禮服攝影業最密集的地段，委託徑圍景觀顧問公司進行改造計畫。把高低不平的步道，升級成更舒適、現代的漫步環境。當景觀公司決定以低調的方式來設計鋪面，其最重要的街道家具「街道燈」，則邀請經驗豐富遠在紐約的燈光大師周錬先生，特地飛回臺灣為此林蔭大道量身打造獨特的街燈。</div>
@@ -36,7 +36,7 @@ author: 故事StoryStudio
 <div class="draft-block draft--p left">我們的都市的記憶必須和時間拉鋸，燈光的印記又比建築及音樂更加脆弱，常被忽略及抹滅。這些燈具，可能不如一些歐洲都市內的煤氣路燈那麼具有時代意義。然而，在臺灣才開始的都市光環境史上，卻是一個里程碑的代表之作。或許可以將大師的精心作品恢復原樣，在都市更新的快速腳步中，留下一段浪漫的樂章！</div>
 <h3 class="draft-block draft--h3" name="header-3h7tj"><span style="font-weight: bold; ">青春混搭 信義區：〈獨上C樓〉by 黃宣</span></h3>
 <div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/EAAR2hnfZOc"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/EAAR2hnfZOc"></iframe></div>
 <div class="draft-block draft--p left">隨著都市發展，最繁華的商業、娛樂中心，由艋舺、大稻埕、三缐路、條通、西門町、東區，一路流轉到目前最潮的信義計劃區！各處的青春男女莫不以最靚的模樣，以飛蛾撲火之姿湧入，每人都散發著「請看我！請看我！」的費洛蒙。</div>
 <div class="draft-block draft--p left">也同樣地，此地矗立高層建物群在夜色中也如此地吶喊，以高分貝的亮度爭奇鬥豔地散光彩。在短暫時間內拔地而起的高樓們，似乎都有各種現代建築語彙的影子，但其共通的調性則是百家爭鳴，最美的風景永遠是自己。就像黃宣嘶吼的〈獨上Ｃ樓〉，藍調、老上海、搖滾及龐克各種風格都有，他則高調的自我定義為 cyberfunk 。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/875eb63e-7aa6-4925-b37d-bb1cef8db758.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">夜幕低垂後的信義區建築燈光（source: unsplash）</figcaption></div></div>
@@ -47,7 +47,7 @@ author: 故事StoryStudio
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">的確，東京在福島事件發生後，社會普遍認為大放光明是不恰當的，因此許多地標建築紛紛熄燈。一位日本燈光設計師分享了六本木、表參道等商圈熄燈的許多照片。他表示：原是關懷環境的關燈舉動卻使得人們更加沮喪。環保、光害的議題，真的必須被仔細地討論，然而恰當的光則對提振士氣有舉足輕重之影響力。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">光環境和人們的心理反應，超出我們想像的複雜，一時半刻也沒有個定論。既來之則讓我們順著黃宣的節奏，裝酷搖擺走上連接各個百貨商場的空橋，或是換上最嗨的裝扮，登上各高樓的觀景平臺、餐廳，從不同的尺度來觀賞。這裡歡樂高分貝的閃爍光景，對於平日慣於安靜的人們，有如參加舞樂激昂的聲光派對，腎上激素隨之興奮飆升，還真有別有一番滋味在心頭。</span></div>
 <h2 class="draft-block draft--h2" name="header-7i3l5"><span style="font-weight: bold; ">爵士 民生社區：〈Waltz for Debby〉 by Bill Evans Trio</span></h2>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/wCINvavqFXk"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/wCINvavqFXk"></iframe></div>
 <div class="draft-block draft--p left">享用信義計畫區的豐盛視覺大餐後，讓我們移駕到民生社區，休閒漫步，平息方才的澎湃。</div>
 <div class="draft-block draft--p left">民生社區，是在1960、70年代出現在本島第一個以美國鄰里單元為範本的區域。因為整體規劃完整，處處是綠意盎然的公園及友善的建築及街道尺度。然而歲月不斷地在連棟的四層公寓留下痕跡，即便沒有直接的捷運幹線，此地仍是最受歡迎的生活首選。</div>
 <div class="draft-block draft--p left">這則要歸功於茂盛的樹群：在白天遮擋強烈陽光，也掩蓋了有些老舊的建築立面並吸收了汽車噪音；在夜間，則形成濾光層，把過亮的招牌及路燈修飾得柔和。樹木扮演著遮光、剪影等多種功能，更吸引了設計師及創意店家的青睬，紛紛在一樓設立工作室，愛好樹景的住戶則選擇樓上。大面的玻璃窗，便成為這裡的共通特色。</div>
@@ -59,7 +59,7 @@ author: 故事StoryStudio
 <div class="draft-block draft--p left">原來，民生社區如爵士般慵懶的夜間景觀，是因為人們覺得安全，安心。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/6552ef2e-b960-450a-97a7-4c0bcbe09f54.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">夜間的民生社區住宅（source: 劉修岑）</figcaption></div></div>
 <h2 class="draft-block draft--h2" name="header-5jov3"><span style="font-weight: bold; ">河岸 〈一樣的月光〉下的什錦歌</span></h2>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/jqN8McQ9d2I"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/jqN8McQ9d2I"></iframe></div>
 <div class="draft-block draft--p left">順著延壽街或是富錦街往東走，可以到達基隆河畔左岸的帶狀河濱公園。</div>
 <div class="draft-block draft--p left">在河濱右岸，都市的天際線樂章更加明顯。在太陽西下短暫Magic Hour時分，以轉深藍的天空為底，是最佳拍攝及觀察夜景的時刻！華燈初上的信義計畫區、大直、內湖的建築群成為幾個音樂的高潮，其間偶而冒出幾個中音階，其餘則是低調且廣的住宅區，由路燈音符連接著。</div>
 <div class="draft-block draft--p left">臺北盆地內，似乎可以聽到玖壹壹的<a href="https://www.youtube.com/watch?v=L1t6pA5H9S8" target="_blank" class="draft--a"><span style="text-decoration: underline; ">〈啪哩啪哩〉</span></a>在萬華區呼嘯而過，激起五顏六色的招牌。拉威爾的<a href="https://www.youtube.com/watch?v=GdaGfTNOYck" target="_blank" class="draft--a"><span style="text-decoration: underline; ">〈波麗路〉</span></a>悠揚的在延平北路奏起，接著南管曲風的<a href="https://youtu.be/HPZRhNJDHSA" target="_blank" class="draft--a"><span style="text-decoration: underline; ">〈相思燈〉</span></a>及純純的<a href="https://www.youtube.com/watch?v=97NMTyDCcXg" target="_blank" class="draft--a"><span style="text-decoration: underline; ">〈跳舞時代〉</span></a>出現在大龍峒、大稻埕。王俊傑調侃古典音樂的<a href="https://www.youtube.com/watch?v=Tq1UHiZHoOg" target="_blank" class="draft--a"><span style="text-decoration: underline; ">〈辦公夥仔〉</span></a>在加班的辦公大樓立面上跳躍。蕭邦的<a href="https://www.youtube.com/watch?v=m3Os6JzDfUc" target="_blank" class="draft--a"><span style="text-decoration: underline; ">〈夜曲〉</span></a>混著蔡琴的<a href="https://www.youtube.com/watch?v=nX4Ci0UXbHk" target="_blank" class="draft--a"><span style="text-decoration: underline; ">〈街燈下〉</span></a>及蕭敬騰的<a href="https://www.youtube.com/watch?v=VUnf5RCGXiI" target="_blank" class="draft--a"><span style="text-decoration: underline; ">〈已讀不回94我〉</span></a>在河面若隱若現地搖晃著…。</div>
