--- a/_posts/2022-10-13-VOCUS-youneverknow.......html
+++ b/_posts/2022-10-13-VOCUS-youneverknow.......html
@@ -32,8 +32,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">就在西元1999年的7月18日，當天剛好是洋基球場的「貝拉日」……貝拉（Yogi Berra，1925－2015）正是當年拉森投出完全比賽時的搭擋補手，同時更是洋基隊史的傳奇風雲人物之一，所以當時已高掛球鞋、退役多年的拉森，受到了球團高層的邀請，前往洋基球場擔任賽前的開球嘉賓，</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">結果沒想到，就在同一天，同一個球場上，洋基陣中的王牌投手孔恩（David Cone），居然就在蒙恩祝福的氛圍或強大氣場中（！），投出了洋基球場史上的... ...</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">第二場完全比賽！</span></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/vPahIUdK8Xg"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/vPahIUdK8Xg"></iframe></div>
 <div class="draft-block draft--p left">孔恩，全場以88個用球數，外加10張老K（三振）的成績，6比0，完美終結了來訪的蒙特婁博覽會隊（Montreal Expos）！當然，隔天這則新聞也火速登上了全美報紙的頭版！</div>
 <div class="draft-block draft--p left">據說拉森在比賽結束之後，親自來到休息區跟孔恩祝賀，還特別說道：</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">「這可是從我由洋基球場退休以後，第一場完整的從第一局坐到第九局全部看完的比賽哩！」</span></div>
