--- a/_posts/2022-10-14-VOCUS-捕鰻的人-海口的浪潮博弈.html
+++ b/_posts/2022-10-14-VOCUS-捕鰻的人-海口的浪潮博弈.html
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/095ce30f-1fdd-4816-b9c1-07dc9363ddb0.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">《捕鰻的人》有很多不錯且相當有趣的詮釋手法，也好在導演捨棄了較長的版本改以快1個小時的短篇紀錄電影來呈現最終的作品，讓整體的故事聚焦在原住民噹噹的故事和周遭捕鰻部落中每個來此處的人物小故事，還有日常零工和夜裡海景，讓我覺得比起生硬的科普，這版感性故事較能讓人共鳴。</div>
 <div class="draft-block draft--p left">人生難免不理想或失意，有時候來的不是驚喜而是驚嚇，《捕鰻的人》紀錄片帶來的是一個中年紀錄片導演拍攝一位，曾經走過失意中年的老年捕鰻人的故事。捕鰻人只有掛在身上的職業別，而背後在寒冬退去迎來春天的時候，要等到明年冬季前往宜蘭的海濱路上，這名牌才會再別上。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/yeSDbfsITow"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/yeSDbfsITow"></iframe></div>
