--- a/_posts/2022-10-14-VOCUS-量產型璃子-我就是平凡的很特別.html
+++ b/_posts/2022-10-14-VOCUS-量產型璃子-我就是平凡的很特別.html
@@ -45,4 +45,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/85811152-33d0-48e7-9ba7-b9b5d44eaf24.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">小向璃子為了休閒和工作開始製作模型，她覺得模型可以讓她專注於製作和思考事情，其他同事在接觸製作模型時，雖然有的一氣呵成、有的笨手笨腳，但是我想專注於完成一件事情，即便是在微小如同模型這樣的小事，在完成以後，還是會有所喜悅感，如同這部日劇雖然只有短短不到半小時，卻從劇情和製作模型的過程都充滿樂趣。</div>
 <div class="draft-block draft--p left">在其他劇本都在敘述主角如何獨特之外，日劇《量產型璃子》給了一個完全不一樣的答案和故事，璃子並不是一個萬能又特殊的女生，只是想安穩過日子又努力做好自己的事情，期望上下班並暗戀公司最帥男性的普通女子，但就算是普通也可以普通的很有個性。差不多的女生雖然什麼都與人差不多，但請原諒我就是這樣位普通的女子，而且平凡快樂的生活每一天。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/mP080tVxz4Q"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/mP080tVxz4Q"></iframe></div>
