--- a/_posts/2022-10-19-VOCUS-世末教師-淺談-麻辣教師gto-熱潮.html
+++ b/_posts/2022-10-19-VOCUS-世末教師-淺談-麻辣教師gto-熱潮.html
@@ -54,4 +54,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/214d9a4b-ca86-41ab-a73b-fccc4b5a9877.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">可以說藤澤亨終究擅長的是不良浪漫，《麻辣教師GTO》也只是披著校園皮的街頭混混式的異色風情，但如今不良漫畫多變，如爆紅的穿越劇《東京卍復仇者》、偽裝雙重身分的《難破MG5》、以搞笑、顏藝為主的《我是大哥大》，甚至還有過去不良漫畫家轉行畫的BL漫《同居不良－赤松與七焚》。</div>
 <div class="draft-block draft--p left">藤澤亨是否可以從他的過往GTO式不良迴圈中走出新意，只能說情懷和賣美女牌無法一用再用，讀者眼睛是雪亮的，是期待《麻辣教師GTO》有更突出，如同過去驚豔讀者的說故事方式，而非只剩露女性內褲的下流梗。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/dpv0T5kRxC4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/dpv0T5kRxC4"></iframe></div>
