--- a/_posts/2022-10-20-VOCUS-4分鐘的金盞菊-未來可能改變嗎.html
+++ b/_posts/2022-10-20-VOCUS-4分鐘的金盞菊-未來可能改變嗎.html
@@ -38,4 +38,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/676bd0cf-d264-4599-b480-3841637d45c5.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">某方面來說我覺得這部漫畫聚焦於當你提早知曉噩耗，是要去改變它還是接受它？且有時候這種命運無法輕易逆轉，裡面並沒有像傳統故事一樣有著奇蹟出現，而是盡可能以自己的最大努力去做好該做的事情，並且享受當下所製造的回憶。跟命運抵抗或是接受命運都沒有對錯，而是如果真的知道死期該要如何去面對，對於自己、家人或喜歡的人。</div>
 <div class="draft-block draft--p left">雖然講述關於命運與生死，《4分鐘的金盞菊》也著重在花巻尊和沙羅的感情戲分與羈絆，我覺得兩人的感情戲雖然是整本漫畫的核心，但老實說並沒有太突出或是讓人感動之處，這一方面日劇則補足了不少關於沙羅與尊的曖昧，還有花卷家其他人的內心與情感流動，算是少數漫改中真人版補足原作設定的案例。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/56NFJipBCp8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/56NFJipBCp8"></iframe></div>
