--- a/_posts/2022-10-25-VOCUS-黑亞當-硬要扣上反派元素的英雄.html
+++ b/_posts/2022-10-25-VOCUS-黑亞當-硬要扣上反派元素的英雄.html
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/b9aa437c-fc8d-4dd5-b260-5a1be6a2a975.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">但對比影評人其實會希望一部英雄電影所要傳達的價值，或嘗試性可以更多或更加關於社會性議題、傳達出個人理念等存在。電影《黑亞當》雖然也有加入議題但是比起近年其他英雄電影來說相對的少上許多，並且反英雄的特點不太出眾，讓人覺得巨石強森只是在演一位有臉部障礙不擅表達的英雄而已，反社會或反派的點，也有只有會殺害敵人這點而已。</div>
 <div class="draft-block draft--p left">我認為《黑亞當》應該要有更多關於不能原諒做惡、對壞蛋零容忍的戲分出來，並且強調他堅持自己的殺人正義，但電影卻弱化了這個具有特色的部分，並且在沙巴克王冠和反派的描繪相當扁平也是一個重點，命運博士一個配角都來得比黑亞當和反派來得有故事性，巨石強森出演英雄固然是絕大賣點，但也請不要放棄對故事的創新，感覺起來故事無創意是《黑亞當》無法滿足影評的主要原因。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/ujhryX8GkHE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/ujhryX8GkHE"></iframe></div>
