--- a/_posts/2022-10-27-VOCUS-鬧鬼實境28天-通靈鬧劇.html
+++ b/_posts/2022-10-27-VOCUS-鬧鬼實境28天-通靈鬧劇.html
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/0f5f0c02-1309-4e50-be98-2400d41f0083.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">現在的觀眾都相當細心，他們會質疑節目中有多少真實性，甚至也知道節目就需要許多效果，尤其在靈異或超能力這類的自由心證的節目，難免會招致懷疑或是是否只是一個故事或演出。《鬧鬼實境28天》跟之前一部談話性節目《目擊超自然》有著同樣的毛病，往往把故事渲染太過誇張，而無法讓人相信真實性。</div>
 <div class="draft-block draft--p left">靈異節目就算誇大也有像是《通靈之戰》這類因為節目效果安排，或是通靈人的個人魅力語氣場讓觀眾喜愛的方式，但是《鬧鬼實境28天》既要誇大的通靈戰爭，又要寫實成分，拿捏不定兩者的比例，最終成為才不到幾集就讓觀眾沒有耐心、罵聲連連，一齣失敗的通靈實境秀。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/7nxuEsx99-k"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/7nxuEsx99-k"></iframe></div>
