--- a/_posts/2022-10-28-INMEDIA-網媒記者涉奏國歌期間舉-港英旗-叫囂-押後至11.10再訊-聆訊後暈倒送院.html
+++ b/_posts/2022-10-28-INMEDIA-網媒記者涉奏國歌期間舉-港英旗-叫囂-押後至11.10再訊-聆訊後暈倒送院.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/mi%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>去年張家朗在東京奧運花劍個人賽中奪金，大批市民在觀塘APM商場觀看直播。一名網媒記者涉在播放國歌時發出噓聲及叫囂，及高舉「港英旗」被捕，成《國歌法》實施後首名被捕者。事隔近一年，她被正式起訴一項「侮辱國歌」罪，及一項「侮辱區旗」作交替控罪。案件今（28日）在觀塘裁判法院提堂，辯方申請將案件押後至11月10日，獲署理主任裁判官陳慧敏批准。聆訊後，被告一度暈倒，倒地時頭部撞向後方的櫈腳，其後恢復清醒。消防處派出一輛消防車及一輛救護車，被告終以擔架送院治理。</p>
+<img src="https://www.inmediahk.net/files/column_images/mi%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>去年張家朗在東京奧運花劍個人賽中奪金，大批市民在觀塘 apm 商場觀看直播。一名網媒記者涉在播放國歌時發出噓聲及叫囂，及高舉「港英旗」被捕，成《國歌法》實施後首名被捕者。事隔近一年，她被正式起訴一項「侮辱國歌」罪，及一項「侮辱區旗」作交替控罪。案件今（28日）在觀塘裁判法院提堂，辯方申請將案件押後至11月10日，獲署理主任裁判官陳慧敏批准。聆訊後，被告一度暈倒，倒地時頭部撞向後方的櫈腳，其後恢復清醒。消防處派出一輛消防車及一輛救護車，被告終以擔架送院治理。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6fj0K66U5h" title="無標題"><img src="https://live.staticflickr.com/65535/52460266518_5904803625_b.jpg" width="1024" alt="無標題" /></a></p>
 <p>被告梁恩寧（41歲）報稱為網媒「Freeman Express」記者。「侮辱國歌」罪指，梁於2021年7月26日在觀塘 apm 商場內，以任何方式公開及故意侮辱國歌。交替控罪「侮辱區旗」罪指，梁於同日同地公開及故意以玷污或踐踏方式侮辱區旗。</p>
 <p>案件編號：KTCC1220/2022</p>
