--- a/_posts/2022-10-29-INMEDIA-港超聯-傑志作客負理文-朱志光批對手踢法消極-踢咗啲學界足球出嚟.html
+++ b/_posts/2022-10-29-INMEDIA-港超聯-傑志作客負理文-朱志光批對手踢法消極-踢咗啲學界足球出嚟.html
@@ -42,7 +42,7 @@ author: 獨媒報導
 <p><strong>陳曉明回應「消極足球」稱有不同戰略  形容屬振奮士氣的一仗  </strong></p>
 <p>理文主教練陳曉明今場穿上紅衣督師，他在賽後表示，今場勝仗可拉近與傑志的距離，「每一場三分都咁重要」。他形容，理文過去半年一直希望能踢出振奮士氣的一仗，「呢場我相信會係，希望今場勝仗亦都令到我哋有信心一路殺落去。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/j07cF009N2" title="DSC_7478"><img src="https://live.staticflickr.com/65535/52461804892_76035ac7a8_b.jpg" width="1024" alt="DSC_7478" /></a></p>
-<p>對於被指消極足球，陳曉明就認為，每場比賽雙方均有不同戰略，「可能調返轉對方都會咁，所以無乜話好comment。總之in a fair game，職足球都要睇少少成績上，當然希望日後可以再改善啲，even受壓嗰時都可以做得好啲，水準上都可以再提升。」他表示，相信球證已盡力執法，沒有任何投訴，如有視像助理裁判會更佳。</p>
+<p>對於被指消極足球，陳曉明就認為，每場比賽雙方均有不同戰略，「可能調返轉對方都會咁，所以無乜話好comment。總之in a fair game，職業足球都要睇少少成績上，當然希望日後可以再改善啲，even受壓嗰時都可以做得好啲，水準上都可以再提升。」他表示，相信球證已盡力執法，沒有任何投訴，如有視像助理裁判會更佳。</p>
 <p>在陳曉明接受訪問時，有部份傑志球迷仍留在看台上爆粗指罵陳，斥「好X核突呀你隊波」、「你返去教書啦好冇呀？」但陳曉明未有理會。</p>
 <p>記者：麥馬高、周頌謙</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
