--- a/_posts/2022-10-30-INMEDIA-前港足代表舉家移民英國-梁子駿-為下一代有更好教育.html
+++ b/_posts/2022-10-30-INMEDIA-前港足代表舉家移民英國-梁子駿-為下一代有更好教育.html
@@ -22,7 +22,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/K0ivD7tb14" title="無標題"><img src="https://live.staticflickr.com/65535/52464780684_bdf2f10b58_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>將落戶劍橋 最不捨父母</strong></p>
 <p>「試下唔係壞事，睇下個世界有幾大。」梁子駿一家將落戶英國劍橋，他承認今次的決定掙扎了好一段時間，最不捨的是父母，「嗯，始終都係為下一代讀書好。」他將先安頓小朋友，再想想未來的方向，「其實係滿心期待，去新環境，小朋友都好興奮，感染到我都好興奮。」</p>
-<p>近二十年的職業生涯，梁子駿自言回憶多於遺憾，但一直享受職業足球員的身份，「踢咗十七、八年，嗯，我比其他球員都好，可以立足咁耐，享受到踢波嘅生活。當中難免有失落，好似輸波，但攞一個冠軍已可以蓋過所有唔開心。」</p>
+<p>近二十年的職業生涯，梁子駿自言回憶多於遺憾，一直享受職業足球員的身份，「踢咗十七、八年，嗯，我比其他球員都好，可以立足咁耐，享受到踢波嘅生活。當中難免有失落，好似輸波，但攞一個冠軍已可以蓋過所有唔開心。」</p>
 <p>入行的時候正值港足冰河時期，梁子駿還記得，球場試過只有50名觀眾，球迷少得聽不到任何掌聲，「靠去捱、去堅持，慢慢睇到球市有起色，再多人睇返同關注。我總會覺得，足球可以將人與人之間嘅距離拉近。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4b2991z912" title="無標題"><img src="https://live.staticflickr.com/65535/52464779799_a9381e2765_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>效力淦源浪子回頭 勉年輕球員勇於追夢</strong></p>
