--- a/_posts/2022-10-31-INMEDIA-金融峰會再有重磅嘉賓-甩底-巴克萊ceo取消行程黑石總裁確診缺席.html
+++ b/_posts/2022-10-31-INMEDIA-金融峰會再有重磅嘉賓-甩底-巴克萊ceo取消行程黑石總裁確診缺席.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202210311.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font><a href="https://www.hkma.gov.hk/chi/key-functions/international-financial-centre/global-financial-leaders-investment-summit/">國際金融領袖投資峰會</a>明日（11月1日）起一連三日舉行，是香港政府極為重視的活動，但峰會開始前夕不利消息接踵而來，先是花旗集團行政總裁Jane Fraser因確診型肺炎而無法赴港，今早再有兩名「重磅嘉賓」將缺席，分別為巴克萊行政總裁C.S. Venkatakrishnan因工作安排而取消行程，黑石總裁兼首席運營官Jonathan Gray亦因確診無法成行。</p>
+<img src="https://www.inmediahk.net/files/column_images/202210311.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font><a href="https://www.hkma.gov.hk/chi/key-functions/international-financial-centre/global-financial-leaders-investment-summit/">國際金融領袖投資峰會</a>明日（11月1日）起一連三日舉行，是香港政府極為重視的活動，但峰會開始前夕不利消息接踵而來，先是花旗集團行政總裁Jane Fraser因確診新型肺炎而無法赴港，今早再有兩名「重磅嘉賓」將缺席，分別為巴克萊行政總裁C.S. Venkatakrishnan因工作安排而取消行程，黑石總裁兼首席運營官Jonathan Gray亦因確診無法成行。</p>
 <p>早前有美國國會議會呼籲國際銀行家杯葛峰會，政務司司長陳國基前日公開批評反華勢力的打壓無所不用其極，「目的就係想我哋搞唔成、或者搞得唔好」。</p>
 <p><strong>金管局稱有信心出席名單「符合預期」</strong></p>
 <p>天公不造美，熱帶氣旋尼格逐步靠近香港，將會在本周三至周四最接近珠江口一帶，碰巧與峰會的日程相撞。金管局助理總裁（外事）陳維民今早向港台表示，金管局已努力就颱風下的峰會安排，制定應變方案，期望今次峰會可以取得成功。他又表示個別人士因為特別情況無法出席峰會，金管局正同個別機構商討替代人選，有信心出席名單符合預期。</p>
