--- a/_posts/2022-10-31-INMEDIA-朗屏邨平日辦業主大會-開明派-挑戰失敗.html
+++ b/_posts/2022-10-31-INMEDIA-朗屏邨平日辦業主大會-開明派-挑戰失敗.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20221031h1.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>以疫情為由四年未改選的元朗朗屏邨法團，法團安排在今日平日（10月31日星期一）中午12時於九龍灣國際展貿中心舉行周年大會。上次朗屏邨特別業主大會群情洶湧，法團在今次大會在主席台前架起鐵馬，分隔出席業主。「開明派」「朗屏邨關注組」派出9人參選，最終全告敗北，現屆親建制法團10人連任。</p>
+<img src="https://www.inmediahk.net/files/column_images/20221031h1.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>以疫情為由四年未改選的元朗朗屏邨法團，法團安排在今日平日（10月31日星期一）中午12時於九龍灣國際展貿中心舉行周年大會。上次朗屏邨特別業主大會群情洶湧，法團在今次大會在主席台前架起鐵馬，分隔出席業主。「開明派」「朗屏街坊關注組」派出9人參選，最終全告敗北，現屆親建制法團10人連任。</p>
 <p><strong>場地設鐵馬分隔台上及台下</strong></p>
 <p>朗屏邨屬房屋署租者置其屋計劃下的公共屋邨，目前由「創毅物業服務顧問有限公司」負責屋邨管理及清潔服務。朗屏邨現任法團於2018年3月就任，上任4年仍未改選。朗屏邨上一次特別業主大會，<a href="https://www.inmediahk.net/node/%E7%A4%BE%E5%8D%80/%E5%85%83%E6%9C%97%E6%9C%97%E5%B1%8F%E9%82%A8%E6%A5%AD%E4%B8%BB%E5%A4%A7%E6%9C%83-%E6%B3%95%E5%9C%98%E5%B9%B3%E6%97%A5%E6%97%BA%E8%A7%92%E9%BA%A5%E8%8A%B1%E8%87%A3%E8%88%89%E8%A1%8C-%E7%88%AD%E8%AD%B0%E4%B8%AD%E9%80%9A%E9%81%8E%E7%AE%A1%E7%90%86%E5%85%AC%E5%8F%B8%E7%BA%8C%E7%B4%84">同樣安排於平日的工作日（9月7日星期三）於旺角麥花臣場館舉行</a>，在未有重新招標下議決延續管理公司及清潔公司合約。會上群情洶湧，業主曾數度鼓躁並一度包圍法團，場面混亂。當日原定到場採訪的記協主席陳朗昇，<a href="https://www.inmediahk.net/node/%E5%AA%92%E9%AB%94/%E9%99%B3%E6%9C%97%E6%98%87%E6%8E%A1%E8%A8%AA%E6%9C%9F%E9%96%93%E8%A2%AB%E6%8D%95-%E8%AD%A6%E6%8C%87%E9%98%BB%E5%B7%AE%E8%BE%A6%E5%85%AC%E3%80%81%E5%85%AC%E7%9C%BE%E5%9C%B0%E6%96%B9%E8%A1%8C%E7%82%BA%E4%B8%8D%E6%AA%A2">被指涉阻差辦公被捕</a>，令事件引起關注。</p>
 <p>今日大會約於12時半開始，現場約有近300人，連同授權票共2,003人出席，涉263,605業權份數。今次大會在主席台前放置一排鐵馬，阻擋台下業主。</p>
@@ -26,11 +26,11 @@ author: 獨媒報導
 <p>結果出爐後，台下傳出一片噓聲，有人大吼「點夠你玩呀？又簽授權票又送三文治！」亦有人大喊「黑箱作業！」不少人更馬上收拾物品離場，場內頓時只剩不足一百人。餘下選出委員職位，包括主席、副主席、秘書及司庫的議程，在20分鐘內極速完成，會議在約下午三時半結束。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/zEqTDP5ff4" title="無標題"><img src="https://live.staticflickr.com/65535/52467528600_0e770413e6_z.jpg" alt="無標題" /></a></p>
 <p><strong>關注組稱將持續監察：我哋仍然係朗屏邨業主</strong></p>
-<p>朗屏邨街坊關注組代表馮小姐表示，關注組在短短三個月內，得到的支持度能與法團一拼，結果已鼓舞人心。她認為，關注組成功告訴現屆法團「朗屏邨係有人監察嘅，唔係你想點就點。」她強調關注組會繼續營運，追究屋邨財政赤字問題，監察管理公司運作等，「唔會話輸咗就算數，因為我哋仍然喺度住，仍然係朗屏邨嘅業主。」</p>
+<p>「朗屏街坊關注組」代表馮小姐表示，關注組在短短三個月內，得到的支持度能與法團一拼，結果已鼓舞人心。她認為，關注組成功告訴現屆法團「朗屏邨係有人監察嘅，唔係你想點就點。」她強調關注組會繼續營運，追究屋邨財政赤字問題，監察管理公司運作等，「唔會話輸咗就算數，因為我哋仍然喺度住，仍然係朗屏邨嘅業主。」</p>
 <p>她提到有不少街坊向關注組反映，自己並未簽署授權書卻「被授權」，關注組未來將嘗試查閱授權名單核實真偽，如果「被授權」業主同意，將會報警處理。但她表示暫時未考慮再爭取改善法團，因為街坊需要時間恢復元氣，「相信有一日可以捲土重來。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/R2jenWr70T" title="無標題"><img src="https://live.staticflickr.com/65535/52466584637_c6b8f1916f_z.jpg" alt="無標題" /></a></p>
 <p><strong>兩度選址九龍區開會 民政處曾預留社區會堂惟被拒</strong></p>
 <p>是次為法團第二次於遠離元朗的地方舉行業主大會，做法引起不滿。關注組代表馮小姐曾就此電郵元朗民政處查詢，獲回覆指管理公司曾向其查詢租借場地事宜，處方已表明可協助租用元朗區內的社區會堂，並即時預留朗屏社區會堂及天耀社區中心的部份時段。惟管理公司其後表示不會租用社區會堂，但未有提供原因。</p>
-<p>「朗屏邨街坊關注組」亦曾在9月7日的會議上遞交534名業主聯署，要求再召開業主大會，內容包括要求查閣2021年6月至2022年5月期間的法團財務細節；要求超過每年預算20%的開支項目必須公開招標；大維修必須使用市建局「招標妥」以及改選法團管委會等。惟法團其後出通告表示，關注組提交的聯署簽名均為副本，不會承認相關聯署。</p>
+<p>「朗屏街坊關注組」亦曾在9月7日的會議上遞交534名業主聯署，要求再召開業主大會，內容包括要求查閣2021年6月至2022年5月期間的法團財務細節；要求超過每年預算20%的開支項目必須公開招標；大維修必須使用市建局「招標妥」以及改選法團管委會等。惟法團其後出通告表示，關注組提交的聯署簽名均為副本，不會承認相關聯署。</p>
 <p>馮小姐表示，法團及關注組雙方正透過民政事務處進行調解，法團表示會在11月交出答覆。她表明若雙方未能達成共識，關注組將考慮就事件入稟土地審裁處。</p>
 </div></div></div>
