--- a/_posts/2022-10-31-INITIUM-早报-乌克兰多地再遭俄罗斯导弹袭击-基辅市民排队打水.html
+++ b/_posts/2022-10-31-INITIUM-早报-乌克兰多地再遭俄罗斯导弹袭击-基辅市民排队打水.html
@@ -28,7 +28,7 @@ author:
 <p>伊朗当局没有透露全国总抓捕人数。人权活动家估计，伊朗全国约有14000人被捕。</p>
 <p>与此同时，两名少年抗议者据称遭伊朗安全部队杀害，再度引起关注。</p>
 <p>库尔德人权组织Hengaw称，16岁抗议者库马尔·达罗夫塔特（Kumar Daroftateh）在西北部城市皮兰沙赫尔（Piranshahr）示威期间，遭近距离枪杀，于当地周日晚在医院去世。在周一的葬礼上，为他送葬人群高喊反政府口号。</p>
-<p>在另一西北城市萨南达季（Sanandaj），人们在坟墓前悼念16岁的萨里娜·赛迪（Kumar Daroftateh）。BBC引述目击者称，她在前几天一场抗议活动中被安全部队开枪击倒在地，然而她的父亲却被迫在电视声称她是自杀。</p>
+<p>在另一西北城市萨南达季（Sanandaj），人们在坟墓前悼念16岁的萨里娜·赛迪（Sarina Saedi）。BBC引述目击者称，她在前几天一场抗议活动中被安全部队开枪击倒在地，然而她的父亲却被迫在电视声称她是自杀。</p>
 <h3>香港已有逾230人涉国安法被捕</h3>
 <p><a href="https://news.now.com/home/local/player?newsId=495747">Now新闻台报导</a>，香港保安局局长邓炳强昨日表示，自《港区国安法》2020年6月30日生效以来，共有超过230人因涉及从事危害国家安全的行为和活动被捕，其中约140人被起诉，41人已被定罪或等候判刑，“全部审结案件都入罪”。</p>
 <p>邓炳强还举例指，唐英杰案、香港人民力量前副主席谭得志案、羊村案的判词，分别说明了国安法的“合法性”及“合宪性”，“对日后无论检控执法工作或23条工作也有帮助”。</p>
