--- a/_posts/2022-11-01-INMEDIA-紅花嶺530公頃2024年劃郊野公園-蓮麻坑礦洞擬改建博物館.html
+++ b/_posts/2022-11-01-INMEDIA-紅花嶺530公頃2024年劃郊野公園-蓮麻坑礦洞擬改建博物館.html
@@ -19,8 +19,8 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/wu4z2SoV01" title="蓮麻坑礦洞（資料圖片）"><img src="https://live.staticflickr.com/65535/52469172992_8af9cbe241_z.jpg" alt="蓮麻坑礦洞（資料圖片）" /></a><br /><em>蓮麻坑礦洞</em></p>
 <p>對於人流方面，漁護署指正進行交通影響評估，當局亦將於沙頭角警署旁增建一條小徑。擬議的郊野公園地圖將在12月底刊憲，供公眾申述，預料於2024年完成程序。</p>
 <p><strong>委員倡再擴公園界線 署方：納入村地會破壞與村民關係</strong></p>
-<p>委員會委員兼長春社主席蘇國賢指，明白現時難以重新評估環團倡議的1,120公頃範圍，但建議再審視範圍外的土地，譬如以其他方式保育高生態價值的風水林，並於日後再探討擴闊公園範圍。另一委員羅榮輝建議可考慮將非村地、非殯葬區的土地納入界線。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/32w85f094R" title="委員兼長春社主席蘇國賢"><img src="https://live.staticflickr.com/65535/52469172162_6740b1ac34_z.jpg" alt="委員兼長春社主席蘇國賢" /></a><br /><em>委員兼長春社主席蘇國賢</em></p>
+<p>委員會委員兼長春社總監蘇國賢指，明白現時難以重新評估環團倡議的1,120公頃範圍，但建議再審視範圍外的土地，譬如以其他方式保育高生態價值的風水林，並於日後再探討擴闊公園範圍。另一委員羅榮輝建議可考慮將非村地、非殯葬區的土地納入界線。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/32w85f094R" title="委員兼長春社主席蘇國賢"><img src="https://live.staticflickr.com/65535/52469172162_6740b1ac34_z.jpg" alt="委員兼長春社主席蘇國賢" /></a><br /><em>委員兼長春社總監蘇國賢</em></p>
 <p>漁護署署長梁肇輝強調殯葬區及私人土地不適合納入範圍，指現時和村民的關係良好、有商有量，「大家有個共識，就係佢哋嘅地方你唔好納入去啦，如果我哋夾硬將呢啲地方納入去，將來嘅管理係非常困難」。至於非殯葬區及非私人村落的土地，梁肇輝同意日後可以再審視，期望委員「袋住先」支持現有方案。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4qhG984304" title="漁護署署長梁肇輝"><img src="https://live.staticflickr.com/65535/52470135215_49e5d79fd2_z.jpg" alt="漁護署署長梁肇輝" /></a><br /><em>漁護署署長梁肇輝</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/BZ0U289VQ0" title="DSC_9881"><img src="https://live.staticflickr.com/65535/52470220718_aeefa5eed6_z.jpg" alt="DSC_9881" /></a></p>
